Integrated Browserfy & Watchify

--- a/src/html/app.html
+++ b/src/html/app.html
@@ -24,6 +24,6 @@
   <div id="app"></div>
 
   <!-- Your JS (use from build!) -->
-  <script src="/app.js"></script>
+  <script src="/app_deploy.js"></script>
 </body>
 </html>
