Added custom font

--- a/src/html/app.html
+++ b/src/html/app.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>React-Tutorial</title>
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Days+One|Michroma|Rationale|Saira+Stencil+One&display=swap" rel="stylesheet">
+
   <!-- My stylesheets -->
   <link rel="stylesheet/less" type="text/css" href="/app.less"/>
 
