Added color scheme

--- a/src/html/app.html
+++ b/src/html/app.html
@@ -5,7 +5,7 @@
   <title>React-Tutorial</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Days+One|Michroma|Rationale|Saira+Stencil+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
   <!-- My stylesheets -->
   <link rel="stylesheet/less" type="text/css" href="/app.less"/>
@@ -18,10 +18,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 </head>
-<body>
+<body class="bg">
 
   <!-- Root Element -->
-  <div id="app"></div>
+  <div id="app" class="shadow"></div>
 
   <!-- Your JS (use from build!) -->
   <script src="/app_deploy.js"></script>
