--- a/src/html/app.html
+++ b/src/html/app.html
@@ -17,6 +17,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/3c231899fb.js"></script>
+
 </head>
 <body class="bg">
 
