--- a/src/html/app.html
+++ b/src/html/app.html
@@ -21,7 +21,7 @@
   <script src="https://kit.fontawesome.com/3c231899fb.js"></script>
 
 </head>
-<body class="bg">
+<body class="background">
 
   <!-- Root Element -->
   <div id="app" class="shadow"></div>
