--- a/src/html/app.html
+++ b/src/html/app.html
@@ -8,10 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
   <!-- My stylesheets -->
-  <link rel="stylesheet/less" type="text/css" href="/app.less"/>
-
-  <!-- LESS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/app.min.css"/>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -27,6 +24,6 @@
   <div id="app" class="shadow"></div>
 
   <!-- Your JS (use from build!) -->
-  <script src="/app_deploy.js"></script>
+  <script src="/app.min.js"></script>
 </body>
 </html>
